# nixman

./: Cargo.toml  build.nix  completion.sh  default.nix  sshor_completion.sh
src/: main.rs  types.rs
templates/: Cargo.lock.j2  Cargo.toml.j2  Main.java.j2  build.nix.j2  build_go.nix.j2  build_maven.nix.j2  build_rust.nix.j2  default.nix.j2  gitignore.j2  main.go.j2  pom.xml.j2
