[package]
name = "nixman"
version = "1.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
clap = { version = "4.5.7", features = ["derive"] }
clap_complete = { version = "4.5.44", features = ["unstable-dynamic"] }
regex = "1.10.5"
